# cita-previa-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: checker.py  config.py  database.py  discovery.py  main.py  telegram_bot.py
